# clerk

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SPEC.md  docker-compose.test.yml  pyproject.toml
.claude/commands/: clerk.md
demo/: Makefile  README.md  config.yaml  docker-compose.yml  send_test_emails.py
docs/plans/: 2026-02-16-v060-cleanup-mcp-parity-design.md  2026-03-03-mcp-redesign-design.md  2026-03-03-mcp-redesign.md  2026-03-03-microsoft365-oauth-design.md  2026-03-03-microsoft365-oauth.md
docs/superpowers/plans/: 2026-03-16-v070-radical-simplification.md
docs/superpowers/specs/: 2026-03-16-v070-radical-simplification-design.md
src/clerk/: __init__.py  api.py  cache.py  cli.py  config.py  drafts.py  imap_client.py  mcp_server.py  microsoft365.py  models.py  oauth.py  search.py  shell.py  skill.py  smtp_client.py  threading.py
tests/: __init__.py  test_api.py  test_cache.py  test_cli.py  test_config.py  test_drafts.py  test_imap_m365.py  test_mcp_mutations.py  test_mcp_redesign.py  test_mcp_server.py  test_mcp_sql.py  test_microsoft365.py  test_models.py  test_oauth.py  test_parse_address.py  test_search.py  test_skill.py  test_smtp_m365.py  test_threading.py
tests/integration/: __init__.py  conftest.py  test_attachments.py  test_inbox.py  test_search.py  test_send.py
