[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clerk"
version = "0.4.0"
description = "A thin CLI for LLM agents to interact with email via IMAP/SMTP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "spinoza" }]
keywords = ["email", "imap", "smtp", "cli", "llm", "agent"]

[project.urls]
Homepage = "https://github.com/spinoza/clerk"
Repository = "https://github.com/spinoza/clerk.git"
Issues = "https://github.com/spinoza/clerk/issues"
Changelog = "https://github.com/spinoza/clerk/blob/main/CHANGELOG.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
]
dependencies = [
    "imapclient>=3.0.0",
    "aiosmtplib>=3.0.0",
    "keyring>=25.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "mcp>=1.7.0,<2",
    "prompt-toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
clerk = "clerk.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/clerk"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/clerk"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
